--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -86,3 +86,12 @@
   year={1989},
   publisher={Cambridge University Press}
 }
+
+@article{sutherland,
+  title={Torsion subgroups of elliptic curves over number fields},
+  author={Sutherland, A. V.},
+  url={http://math.mit.edu/~drew/MazursTheoremSubsequentResults.pdf},
+  howpublished={\url{http://math.mit.edu/~drew/MazursTheoremSubsequentResults.pdf}},
+  year={2012},
+}
+
