--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -87,6 +87,17 @@
   publisher={Cambridge University Press}
 }
 
+@book{knapp,
+  title={Elliptic Curves},
+  author={Knapp, A. W.},
+  isbn={9780691085593},
+  lccn={lc92022183},
+  series={Mathematical Notes - Princeton University Press},
+  url={http://books.google.co.uk/books?id=-e\_qVoKF8H8C},
+  year={1992},
+  publisher={Princeton University Press}
+}
+
 @article{sutherland,
   title={Torsion subgroups of elliptic curves over number fields},
   author={Sutherland, A. V.},
