--- a/doc/report.tex
+++ b/doc/report.tex
@@ -19,7 +19,7 @@
 % - Applications to elliptics over Q
 % - Conclusion
 
-\documentclass[a4paper,abstracton]{scrreprt}
+\documentclass[a4paper,abstracton,bibtotoc]{scrreprt}
 
 \author{Alex J. Best \\Supervised by Dr. Lassina Demb\'el\'e}
 \date{2014}
@@ -219,6 +219,8 @@ We can use the notion of index in a variety of situations here, such as consider
 \section{Elliptic curves}
 We now introduce the background material relevant to elliptic curves, one of the intended applications of these methods.
 This is not required for the main problem discussed in chapter~\ref{chap:prob}, but section~\ref{sec:ell} uses these ideas heavily.
+As with the above sections everything here can be found in textbooks on elliptic curves (such as \cite{knapp}), we just move quickly to the parts relevent to us in this section.
+%TODO more refs
 
 Given an elliptic curve $E$ and a field $K$ we let $E(K)$ be the set of points in $K^2$ satisfying the equation defining $E$, along with an extra point $\infty$.
 This extra point is called the point at infinity, the reasons for its inclusion in the set should become clear later.
