useful commit message

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -25,7 +25,7 @@
   series={Graduate Texts in Mathematics},
   url={http://books.google.co.uk/books?id=Vaq2154dsQIC},
   year={2000},
-  publisher={Springer New York}
+  publisher={Springer}
 }
 
 @book{neukirch,
@@ -97,6 +97,14 @@
   year={1992},
   publisher={Princeton University Press}
 }
+
+@book{marcus,
+  title={Number Fields},
+  author={Marcus, D. A.},
+  isbn={0387902791},
+  series={Universitext},
+  year={1945},
+  publisher={Springer}
 
 @article{sutherland,
   title={Torsion subgroups of elliptic curves over number fields},
